samples/_failures_safe/1761665876_ef88df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aabec9a7.c: In function ‘main’:
./samples/SAFE/__tmp_aabec9a7.c:144:20: error: expected expression at end of input
  144 |                    entries[i].timestamp,
      |                    ^~~~~~~
./samples/SAFE/__tmp_aabec9a7.c:144:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aabec9a7.c:144:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aabec9a7.c:144:20: error: expected declaration or statement at end of input
